option('tests', type: 'feature', value: 'auto', description: 'build focused Meson validation tests')
option('examples', type: 'feature', value: 'disabled', description: 'build embedding examples')
option('benchmarks', type: 'boolean', value: false, description: 'build native benchmark executables')
option('libc', type: 'boolean', value: false, description: 'link TurboJS libc modules into the engine library')
option('cli_mimalloc', type: 'feature', value: 'disabled', description: 'link the TurboJS CLI with mimalloc')
option('parser', type: 'boolean', value: true, description: 'enable the JavaScript source parser')
option('optimizing_jit', type: 'boolean', value: true, description: 'enable Redline optimizing JIT, Slipstream OSR, and Telemetry')
